Clean repository without large video file

--- a/amravati.html
+++ b/amravati.html
@@ -359,6 +359,7 @@
             <div class="tag-row">
                 <span class="badge-pill tag-red">GREENFIELD AIRPORT</span>
                 <span class="badge-pill tag-blue"><i class="fas fa-map-marker-alt me-1"></i> BELORA, AMRAVATI</span>
+                <span class="badge-pill tag-green" style="background-color: #28a745; color: wheat;">MADC Operated</span>
             </div>
 
             <div>
@@ -369,13 +370,13 @@
             <div class="highlight-box">
                 <span class="info-label"><i class="fas fa-info-circle me-1"></i> Project Overview</span>
                 <p id="read-intro" style="font-size: 0.85rem; color: #555; line-height: 1.6; margin: 0;">
-                    Amravati (Belora) Airport is a Code 3C Greenfield project spanning 411 Ha. Operations are scheduled to commence on 16th April 2025. The site features a 2600 Sqm terminal, a 1850m runway, and hosts South Asia’s biggest Flying Training Organization (FTO) by Air India. Night landing facilities are set to be commissioned by April 2026.
+                    Amravati (Belora) Airport is a Code 3C Greenfield project spanning 411 Ha. Operations are commenced on 16th April 2025. The site features a 2600 Sqm terminal, a 1850m runway, and hosts South Asia’s biggest Flying Training Organization (FTO) by Air India. Night landing facilities are set to be commissioned by April 2026.
                 </p>
             </div>
 
             <div id="read-content" style="display:none;">
                 Welcome to Amravati Belora Greenfield Airport.
-                This Code 3C airport spans 411 Hectares and is scheduled to commence operations on the 16th of April, 2025.
+                This Code 3C airport spans 411 Hectares and is set to commence operations on the 16th of April, 2025.
                 The infrastructure includes a 1850 meter by 45 meter runway with designation 08 26.
                 The facility features a 2600 square meter terminal building and a 23 meter high ATC tower.
                 The apron accommodates 2 aircraft parking bays.
