--- a/baramati.html
+++ b/baramati.html
@@ -274,9 +274,9 @@
                                 Your browser does not support the video tag.
                             </video>
                         </div>
-                        <div class="carousel-item h-100" data-bs-interval="3000">
+                        <!-- <div class="carousel-item h-100" data-bs-interval="3000">
                             <img src="assets/img/dhule2.jpg" class="d-block w-100 hero-img" alt="Baramati Runway">
-                        </div>
+                        </div> -->
                       
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#baramatiCarousel" data-bs-slide="prev">
@@ -288,7 +288,7 @@
                 </div>
             </div>
 
-            <div class="stats-grid">
+            <!-- <div class="stats-grid">
                 <div class="stat-card">
                     <div class="stat-icon-circle bg-red-grad"><i class="fas fa-ruler-combined"></i></div>
                     <span class="stat-val">GA Runway</span>
@@ -304,7 +304,7 @@
                     <span class="stat-val">Cargo & GA</span>
                     <span class="stat-label">Operations</span>
                 </div>
-            </div>
+            </div> -->
 
             <div class="p-3 bg-white rounded-3 border d-flex align-items-center gap-3 mt-auto">
                 <div class="stat-icon-circle bg-red-grad m-0" style="width: 35px; height: 35px; font-size: 1rem;">
@@ -319,7 +319,7 @@
 
         <div class="right-panel">
             <div class="tag-row">
-                <span class="badge-pill tag-red">REGIONAL AIRSTRIP</span>
+                <!-- <span class="badge-pill tag-red">REGIONAL AIRSTRIP</span> -->
                 <span class="badge-pill tag-orange"><i class="fas fa-map-marker-alt me-1"></i> BARAMATI, PUNE DISTRICT</span>
             </div>
 
@@ -335,12 +335,12 @@
                 </p>
             </div>
 
-            <div class="mt-4">
+            <!-- <div class="mt-4">
                 <h5 style="font-weight: 700; font-size: 1rem; color: var(--madc-dark); margin-bottom: 10px;">About Baramati Airport</h5>
                 <p id="read-intro" style="font-size: 0.85rem; color: #555; line-height: 1.6; margin: 0;">
                     Baramati Airport is a public-use airport located approximately twelve kilometers from Baramati city in the Pune district of Maharashtra. Originally constructed by the Maharashtra Industrial Development Corporation in nineteen ninety-six.
                 </p>
-            </div>
+            </div> -->
 
             <div id="read-content" style="display:none;">
                 Welcome to Baramati Airport. Baramati Airport is a public-use airstrip located approximately twelve kilometers from Baramati city. The airport was originally constructed in nineteen ninety-six. Today, Baramati Airport functions primarily as a general aviation and aviation training hub.
@@ -354,6 +354,9 @@
                     </div>
                     <div class="feature-item">
                         <i class="fas fa-graduation-cap"></i> <span>Pilot Training Operations</span>
+                    </div>
+                    <div class="feature-item">
+                        <i class="fas fa-plane"></i> <span>Non Scheduled Operations</span>
                     </div>
                 </div>
             </div>
