--- a/chandrapur.html
+++ b/chandrapur.html
@@ -274,12 +274,12 @@
                                 Your browser does not support the video tag.
                             </video>
                         </div>
-                        <div class="carousel-item h-100" data-bs-interval="3000">
+                        <!-- <div class="carousel-item h-100" data-bs-interval="3000">
                             <img src="assets/img/nanded2.jpg" class="hero-img" alt="Chandrapur View 1">
                         </div>
                         <div class="carousel-item h-100" data-bs-interval="3000">
                             <img src="assets/img/nanded2.jpg" class="hero-img" alt="Chandrapur View 2">
-                        </div>
+                        </div> -->
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#chandrapurCarousel" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon"></span>
@@ -293,14 +293,10 @@
             <div class="stats-grid">
                 <div class="stat-card">
                     <div class="stat-icon-circle bg-red-grad"><i class="fas fa-plane-departure"></i></div>
-                    <span class="stat-val">VIP</span>
-                    <span class="stat-label">Flights</span>
+                    <span class="stat-val">Non Scheduled</span>
+                    <span class="stat-label">Operations</span>
                 </div>
-                <div class="stat-card">
-                    <div class="stat-icon-circle bg-grey-grad"><i class="fas fa-road"></i></div>
-                    <span class="stat-val">950m</span>
-                    <span class="stat-label">Airstrip</span>
-                </div>
+              
                 <div class="stat-card">
                     <div class="stat-icon-circle bg-red-grad"><i class="fas fa-paw"></i></div>
                     <span class="stat-val">Tiger</span>
@@ -321,12 +317,12 @@
 
         <div class="right-panel">
             <div class="tag-row">
-                <span class="badge-pill tag-red">DOMESTIC AIRPORT</span>
+                <!-- <span class="badge-pill tag-red">DOMESTIC AIRPORT</span> -->
                 <span class="badge-pill tag-dark"><i class="fas fa-map-marker-alt me-1"></i> CHANDRAPUR, MAHARASHTRA</span>
             </div>
 
             <div>
-                <h1 class="main-title">Chandrapur Morva Airport</h1>
+                <h1 class="main-title">Chandrapur (Morva) Airport</h1>
                 <p class="subtitle">"Gateway to the Black Gold City & Tadoba Tiger Reserve"</p>
             </div>
 
@@ -354,7 +350,7 @@
                         <i class="fas fa-paw"></i> <span>Tadoba Tiger Reserve</span>
                     </div>
                     <div class="feature-item">
-                        <i class="fas fa-road"></i> <span>950m Airstrip</span>
+                        <i class="fas fa-road"></i> <span>FTO Training</span>
                     </div>
                 </div>
             </div>
