--- a/dharashiv.html
+++ b/dharashiv.html
@@ -273,12 +273,12 @@
                                 Your browser does not support the video tag.
                             </video>
                         </div>
-                        <div class="carousel-item h-100" data-bs-interval="3000">
+                        <!-- <div class="carousel-item h-100" data-bs-interval="3000">
                             <img src="assets/img/dharashiv1.jpeg" class="d-block w-100 hero-img" alt="Dharashiv Runway">
                         </div>
                         <div class="carousel-item h-100" data-bs-interval="3000">
                             <img src="assets/img/dharashiv2.jpeg" class="d-block w-100 hero-img" alt="Terminal Zone">
-                        </div>
+                        </div> -->
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#dharashivCarousel" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -289,7 +289,7 @@
                 </div>
             </div>
 
-            <div class="stats-grid">
+            <!-- <div class="stats-grid">
                 <div class="stat-card">
                     <div class="stat-icon-circle bg-red-grad"><i class="fas fa-ruler-combined"></i></div>
                     <span class="stat-val">Upgradation Planned</span>
@@ -305,7 +305,7 @@
                     <span class="stat-val">Modernization</span>
                     <span class="stat-label">Facilities</span>
                 </div>
-            </div>
+            </div> -->
 
             <div class="p-3 bg-white rounded-3 border d-flex align-items-center gap-3 mt-auto">
                 <div class="stat-icon-circle bg-red-grad m-0" style="width: 35px; height: 35px; font-size: 1rem;">
@@ -320,7 +320,7 @@
 
         <div class="right-panel">
             <div class="tag-row">
-                <span class="badge-pill tag-red">REGIONAL AIRPORT</span>
+                <!-- <span class="badge-pill tag-red">REGIONAL AIRPORT</span> -->
                 <span class="badge-pill tag-orange"><i class="fas fa-map-marker-alt me-1"></i> DHARASHIV (OSMANABAD), MAHARASHTRA</span>
             </div>
 
@@ -330,18 +330,18 @@
             </div>
 
             <div class="highlight-box">
-                <span class="info-label"><i class="fas fa-info-circle me-1"></i> Development Status</span>
+                <span class="info-label"><i class="fas fa-info-circle me-1"></i>About Dharashiv Airport</span>
                 <p style="font-size: 0.85rem; color: #555; line-height: 1.6; margin: 0;">
-                    Dharashiv Airport is currently under planning and upgradation by MADC. Infrastructure improvements are aimed at modernizing the airport and integrating it into Maharashtra’s regional air connectivity network.
+                    Dharashiv Airport is currently under planning and upgradation by MADC. Infrastructure improvements are aimed at modernizing the airport and integrating it into Maharashtra’s regional air connectivity network.<br/>Government resolution regarding handing over of Dharashiv Airport to MADC Ltd. released on 30th December 2025.
                 </p>
             </div>
 
-            <div class="mt-4">
+            <!-- <div class="mt-4">
                 <h5 style="font-weight: 700; font-size: 1rem; color: var(--madc-dark); margin-bottom: 10px;">About Dharashiv Airport</h5>
                 <p id="read-intro" style="font-size: 0.85rem; color: #555; line-height: 1.6; margin: 0;">
                     Dharashiv Airport, formerly known as Osmanabad Airport, is slated for upgradation by the Maharashtra Airport Development Company Limited to strengthen regional air connectivity.
                 </p>
-            </div>
+            </div> -->
 
             <div id="read-content" style="display:none;">
                 Welcome to Dharashiv Airport, formerly known as Osmanabad Airport. 
@@ -349,7 +349,7 @@
                 The upgradation project focuses on enhancing core aviation infrastructure, including runway improvements and passenger terminal development.
             </div>
 
-            <div class="mt-4">
+            <!-- <div class="mt-4">
                 <span class="info-label" style="color:#888; margin-bottom: 8px;">KEY FEATURES & DEVELOPMENT</span>
                 <div class="features-grid">
                     <div class="feature-item">
@@ -365,7 +365,7 @@
                         <i class="fas fa-map-marked-alt"></i> <span>Regional Connectivity Focus</span>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <div class="action-row">
                 <button id="voiceBtn" class="btn-premium btn-ai" onclick="toggleVoice()">
