--- a/gadchiroli.html
+++ b/gadchiroli.html
@@ -285,10 +285,10 @@
         <div class="left-panel">
             
             <div class="hero-image-wrapper">
-                <img src="assets/img/nanded2.jpg" class="hero-img" alt="Gadchiroli Airport">
+                <img src="assets/img/logo/logo-madc.jpeg" class="hero-img" alt="Gadchiroli Airport">
             </div>
 
-            <div class="stats-grid">
+            <!-- <div class="stats-grid">
                 <div class="stat-card">
                     <div class="stat-icon-circle bg-red-grad"><i class="fas fa-file-signature"></i></div>
                     <span class="stat-val">13 Dec 2024</span>
@@ -304,7 +304,7 @@
                     <span class="stat-val">Tri-State</span>
                     <span class="stat-label">Connectivity</span>
                 </div>
-            </div>
+            </div> -->
 
             <div class="p-3 bg-white rounded-3 border d-flex align-items-center gap-3 mt-auto">
                 <div class="stat-icon-circle bg-red-grad m-0" style="width: 35px; height: 35px; font-size: 1rem;">
@@ -333,7 +333,7 @@
             <div class="highlight-box">
                 <span class="info-label"><i class="fas fa-info-circle me-1"></i> About Airport</span>
                 <p id="read-intro" style="font-size: 0.85rem; color: #555; line-height: 1.6; margin: 0;">
-                    Gadchiroli Airport is a proposed Greenfield Airport being developed by the Government of Maharashtra. The strategic location of the airport will benefit not only Maharashtra but also neighbouring states such as Chhattisgarh and Telangana. With rapid industrial development and major investments, Gadchiroli is emerging as a new growth corridor of central India.
+                    Gadchiroli Airport is a proposed Greenfield Airport being developed by the MADC Ltd. The strategic location of the airport will benefit not only Maharashtra but also neighbouring states such as Chhattisgarh and Telangana. With rapid industrial development and major investments, Gadchiroli is emerging as a new growth corridor of central India.
                 </p>
             </div>
 
@@ -341,9 +341,9 @@
                 Welcome to Gadchiroli Airport.
                 The Government of Maharashtra issued a Government Resolution for the development of Gadchiroli Airport on 13th December 2024.
                 The strategic location of Gadchiroli Airport is beneficial not only for Maharashtra but also for neighbouring states such as Chhattisgarh and Telangana.
-                On 1st January 2025, Hon’ble Chief Minister Shri Devendra Fadnavis stated that “Gadchiroli will not be the last district of Maharashtra, but the first district of Maharashtra.”
-                With the launch of the Lloyd Metals unit and several upcoming industrial projects, Gadchiroli is poised to become the new Steel City of India.
-                The airport site has been finalized and preliminary processes related to land acquisition are currently in progress.
+                <!-- On 1st January 2025, Hon’ble Chief Minister Shri Devendra Fadnavis stated that “Gadchiroli will not be the last district of Maharashtra, but the first district of Maharashtra.”
+                With the launch of the Lloyd Metals unit and several upcoming industrial projects, Gadchiroli is poised to become the new Steel City of India. -->
+                <!-- The airport site has been finalized and preliminary processes related to land acquisition are currently in progress. -->
                 The proposed airport will play a key role in boosting industrial growth, improving regional connectivity, and transforming Gadchiroli into a major economic hub of the future.
             </div>
 
