--- a/karad.html
+++ b/karad.html
@@ -77,6 +77,7 @@
 
         .stat-card {
             background: white;
+         
             padding: 15px 5px;
             border-radius: 16px;
             text-align: center;
@@ -292,21 +293,21 @@
             </div>
 
             <div class="stats-grid">
-                <div class="stat-card">
+                <!-- <div class="stat-card">
                     <div class="stat-icon-circle bg-red-grad"><i class="fas fa-plane-departure"></i></div>
                     <span class="stat-val">VIP</span>
                     <span class="stat-label">Movement</span>
-                </div>
+                </div> -->
                 <div class="stat-card">
                     <div class="stat-icon-circle bg-grey-grad"><i class="fas fa-road"></i></div>
                     <span class="stat-val">1280m</span>
                     <span class="stat-label">Runway</span>
                 </div>
-                <div class="stat-card">
+                <!-- <div class="stat-card">
                     <div class="stat-icon-circle bg-red-grad"><i class="fas fa-graduation-cap"></i></div>
                     <span class="stat-val">FTO</span>
                     <span class="stat-label">Active</span>
-                </div>
+                </div> -->
             </div>
 
             <div class="p-3 bg-white rounded-3 border d-flex align-items-center gap-3 mt-auto">
@@ -328,13 +329,13 @@
 
             <div>
                 <h1 class="main-title">Karad Airport</h1>
-                <p class="subtitle">"Facilitating VIP movement and Aviation Training"</p>
+                <p class="subtitle">"Facilitating  Non scheduled Flights and Aviation Training"</p>
             </div>
 
             <div class="highlight-box">
                 <span class="info-label"><i class="fas fa-info-circle me-1"></i> About Karad Airport</span>
                 <p id="read-intro" style="font-size: 0.85rem; color: #555; line-height: 1.6; margin: 0;">
-                    Maintained by MADC, Karad Airport plays a vital role in connecting corporates and VIPs via non-scheduled flights. Expansion plans are underway for ATR-72 aircraft.
+                    Maintained by MADC, Karad Airport plays a vital role in operating  non-scheduled flights. Expansion plans are underway for ATR-72 aircraft.
                 </p>
             </div>
 
@@ -349,7 +350,7 @@
                         <i class="fas fa-road"></i> <span>1280m x 30m Runway</span>
                     </div>
                     <div class="feature-item">
-                        <i class="fas fa-user-tie"></i> <span>VIP & Corporate Flights</span>
+                        <i class="fas fa-user-tie"></i> <span>Non Scheduled Flights</span>
                     </div>
                     <div class="feature-item">
                         <i class="fas fa-plane"></i> <span>ATR-72 Expansion Planned</span>
