--- a/mihan.html
+++ b/mihan.html
@@ -277,11 +277,11 @@
             </div>
 
             <div class="stats-grid">
-                <div class="stat-card">
+                <!-- <div class="stat-card">
                     <div class="stat-icon-circle bg-red-grad"><i class="fas fa-map-marked-alt"></i></div>
                     <span class="stat-val">4300 Ha</span>
                     <span class="stat-label">Total Project</span>
-                </div>
+                </div> -->
                 <div class="stat-card">
                     <div class="stat-icon-circle bg-grey-grad"><i class="fas fa-layer-group"></i></div>
                     <span class="stat-val">1018 Ha</span>
@@ -307,10 +307,10 @@
 
         <div class="right-panel">
             <div class="tag-row">
-                <span class="badge-pill tag-red">INTERNATIONAL HUB</span>
+                <span class="badge-pill tag-red">INTERNATIONAL AIRPORT</span>
                 <span class="badge-pill tag-orange"><i class="fas fa-map-marker-alt me-1"></i> NAGPUR, MAHARASHTRA</span>
-                <a href="mihan-sez.html" class="badge-pill tag-outline">SEZ Info</a>
-                <a href="infrastructure.html" class="badge-pill tag-outline">Infra</a>
+                <a href="mihan-sez.html" class="badge-pill tag-red">SEZ</a>
+                <!-- <a href="infrastructure.html" class="badge-pill tag-outline">Infra</a> -->
             </div>
 
             <div>
@@ -323,7 +323,7 @@
             <div class="highlight-box">
                 <span class="info-label"><i class="fas fa-info-circle me-1"></i> Project Overview</span>
                 <p id="read-intro" style="font-size: 0.85rem; color: #555; line-height: 1.6; margin: 0;">
-                    MIHAN is a fully operational Multi-Product Special Economic Zone (SEZ) abutting Dr. Babasaheb Ambedkar International Airport. Strategically located at the Zero Mile Centre of India, it offers Single Window Clearance and Plug & Play office spaces.
+                    MIHAN is a fully operational Multi-Product Special Economic Zone (SEZ) abutting Dr. Babasaheb Ambedkar International Airport. Strategically located at the Zero Mile Centre of India, it offers Single Window Clearance and Plug & Play office spaces.<br/> Customs Duty Exemption,  	 Electricity (Power) supply at concessional / minimal rates and  	 GST exemption / zero-rated supplies as applicable under SEZ regulations.
                 </p>
             </div>
 
@@ -339,6 +339,9 @@
                 <div class="features-grid">
                     <div class="feature-item">
                         <i class="fas fa-industry"></i> <span>Multi-Product SEZ</span>
+                    </div>
+                    <div class="feature-item">
+                        <i class="fas fa-plane"></i> <span>MRO Facilities</span>
                     </div>
                     <div class="feature-item">
                         <i class="fas fa-map-pin"></i> <span>Zero Mile Location</span>
