--- a/phaltan.html
+++ b/phaltan.html
@@ -287,7 +287,7 @@
                 <img src="assets/img/logo/phaltan_project2.jpg" class="hero-img" alt="Phaltan Airport View">
             </div>
 
-            <div class="stats-grid">
+            <!-- <div class="stats-grid">
                 <div class="stat-card">
                     <div class="stat-icon-circle bg-red-grad"><i class="fas fa-plane-departure"></i></div>
                     <span class="stat-val">VIP</span>
@@ -303,7 +303,7 @@
                     <span class="stat-val">567m</span>
                     <span class="stat-label">Elevation</span>
                 </div>
-            </div>
+            </div> -->
 
             <div class="p-3 bg-white rounded-3 border d-flex align-items-center gap-3 mt-auto">
                 <div class="stat-icon-circle bg-red-grad m-0" style="width: 35px; height: 35px; font-size: 1rem;">
@@ -325,20 +325,20 @@
 
             <div>
                 <h1 class="main-title">Phaltan Airport</h1>
-                <p class="subtitle">"Historic Aviation Hub in Satara District"</p>
+                <!-- <p class="subtitle">"Historic Aviation Hub in Satara District"</p> -->
             </div>
 
             <div class="highlight-box">
                 <span class="info-label"><i class="fas fa-info-circle me-1"></i> About Phaltan</span>
                 <p id="read-intro" style="font-size: 0.85rem; color: #555; line-height: 1.6; margin: 0;">
-                    Phaltan is a key city and taluka in the Satara district of Maharashtra. Located about 59 km from Satara and 110 km from Pune, it hosts an existing airport that dates back to 1948.
+                    Phaltan is a key city and taluka in the Satara district of Maharashtra. Located about 59 km from Satara and 110 km from Pune, it hosts an existing airport With Length & Width of Runway – 800 m X 30 m
                 </p>
             </div>
 
             <div id="read-content" style="display:none;">
                 Phaltan Airport. Phaltan is a city and taluka in the Satara district of Maharashtra.
                 The town is about 59 kilometers north-east of Satara city and about 110 kilometers from Pune.
-                Phaltan has an existing airport which was constructed somewhere in 1948.
+                Phaltan has an existing airport which was constructed somewhere in 1948.Length & Width of Runway – 800 m X 30 m
                 The aerodrome elevation is 567 meters Above Mean Sea Level.
                 The airport is currently being used for chartered operations, majorly for VIP and VVIP helicopter movements.
             </div>
@@ -346,24 +346,24 @@
             <div>
                 <span class="info-label" style="color:#888; margin-bottom: 8px;">AIRPORT HIGHLIGHTS</span>
                 <div class="features-grid">
-                    <div class="feature-item">
+                    <!-- <div class="feature-item">
                         <i class="fas fa-calendar-alt"></i> <span>Constructed in 1948</span>
-                    </div>
+                    </div> -->
                     <div class="feature-item">
-                        <i class="fas fa-helicopter"></i> <span>Chartered & Heli-Ops</span>
+                        <i class="fas fa-helicopter"></i> <span>Non-scheduled & Heli Operations</span>
                     </div>
-                    <div class="feature-item">
+                    <!-- <div class="feature-item">
                         <i class="fas fa-user-tie"></i> <span>VIP/VVIP Movement</span>
-                    </div>
-                    <div class="feature-item">
+                    </div> -->
+                    <!-- <div class="feature-item">
                         <i class="fas fa-mountain"></i> <span>567m Elevation (AMSL)</span>
-                    </div>
-                    <div class="feature-item">
+                    </div> -->
+                    <!-- <div class="feature-item">
                         <i class="fas fa-map-marked-alt"></i> <span>59km from Satara</span>
-                    </div>
-                    <div class="feature-item">
+                    </div> -->
+                    <!-- <div class="feature-item">
                         <i class="fas fa-city"></i> <span>110km from Pune</span>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
