--- a/pune-purandar.html
+++ b/pune-purandar.html
@@ -304,7 +304,7 @@
                 <div class="stat-card">
                     <div class="stat-icon-circle bg-red-grad"><i class="fas fa-ruler-combined"></i></div>
                     <span class="stat-val">2832 Ha</span>
-                    <span class="stat-label">Area</span>
+                    <span class="stat-label"> NotifiedArea</span>
                 </div>
             </div>
 
@@ -334,7 +334,7 @@
             <div class="highlight-box">
                 <span class="info-label"><i class="fas fa-info-circle me-1"></i> Project Overview</span>
                 <p id="read-intro" style="font-size: 0.85rem; color: #555; line-height: 1.6; margin: 0;">
-                    With the existing International Airport at Pune (Lohegaon) already over-saturated, a new Greenfield Airport is planned near Purandar. This massive project, developed through PPP, aims for a capacity of 75 MPPA.
+                    With the existing International Airport at Pune (Lohegaon) already over-saturated, a new Greenfield Airport is planned near Purandar. This massive project, developed through PPP, aims for a capacity of 75 MPPA. MADC is appointed as Special Planning Authority for CSRIA notified area of 2832 Ha at Purandar vide GR dated 16/07/2018.
                 </p>
             </div>
 
