--- a/udan-rcs-mah.html
+++ b/udan-rcs-mah.html
@@ -519,7 +519,7 @@
         // 2. Header/Footer Loader
         $(document).ready(function () {
             $("#header-container").load("header-udan.html");
-            $("#footer-container").load("footer.html");
+            // $("#footer-container").load("footer.html");
         });
 
         // 3. PRECISION COUNTDOWN LOGIC
