--- a/yavatmal.html
+++ b/yavatmal.html
@@ -327,13 +327,13 @@
 
             <div>
                 <h1 class="main-title">Yavatmal Airport</h1>
-                <p class="subtitle">"Emerging regional aviation gateway under MADC redevelopment"</p>
+                <p class="subtitle">"Emerging regional aviation gateway under MADC </p>
             </div>
 
             <div class="highlight-box">
                 <span class="info-label"><i class="fas fa-info-circle me-1"></i> Development Status</span>
                 <p style="font-size: 0.85rem; color: #555; line-height: 1.6; margin: 0;">
-                    MADC has assumed full operational control. Infrastructure upgrades, security works, and night landing facilities are currently in progress.Government resolution regarding handing over of Yavatmal Airport to MADC Ltd. released on 31st December 2025
+                    MADC has assumed full operational control. Infrastructure upgrades, security works, and night landing facilities are currently in progress.Government resolution regarding handing over of Yavatmal Airport to MADC Ltd. released on 31th December 2025
                 </p>
             </div>
 
