--- a/dhule.html
+++ b/dhule.html
@@ -262,11 +262,11 @@
         <div class="row g-0 w-100 m-0">
             <div class="col-lg-5 left-panel">
                 <div id="dhuleCarousel" class="carousel slide hero-slider-wrapper" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
+                    <!-- <div class="carousel-indicators">
                         <button type="button" data-bs-target="#dhuleCarousel" data-bs-slide-to="0" class="active"></button>
                         <button type="button" data-bs-target="#dhuleCarousel" data-bs-slide-to="1"></button>
                         <button type="button" data-bs-target="#dhuleCarousel" data-bs-slide-to="2"></button>
-                    </div>
+                    </div> -->
                     <div class="carousel-inner h-100">
                         <div class="carousel-item active h-100" data-bs-interval="10000">
                             <video id="dhuleVideo" class="hero-video" autoplay muted loop playsinline>
@@ -274,37 +274,37 @@
                                 Your browser does not support the video tag.
                             </video>
                         </div>
-                        <div class="carousel-item h-100">
+                        <!-- <div class="carousel-item h-100">
                             <img src="assets/img/dhule1.jpg" alt="Dhule Airport">
                         </div>
                         <div class="carousel-item h-100">
                             <img src="assets/img/dhule2.jpg" alt="Dhule Runway">
-                        </div>
+                        </div> -->
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#dhuleCarousel" data-bs-slide="prev">
+                    <!-- <button class="carousel-control-prev" type="button" data-bs-target="#dhuleCarousel" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon"></span>
                     </button>
                     <button class="carousel-control-next" type="button" data-bs-target="#dhuleCarousel" data-bs-slide="next">
                         <span class="carousel-control-next-icon"></span>
-                    </button>
+                    </button> -->
                 </div>
 
                 <div class="stats-grid">
-                    <div class="stat-card">
+                    <!-- <div class="stat-card">
                         <div class="stat-icon-circle bg-red-grad"><i class="fas fa-plane-departure"></i></div>
                         <span class="stat-val">VIP</span>
                         <span class="stat-label">Operations</span>
-                    </div>
+                    </div> -->
                     <div class="stat-card">
                         <div class="stat-icon-circle bg-grey-grad"><i class="fas fa-graduation-cap"></i></div>
                         <span class="stat-val">FTO</span>
                         <span class="stat-label">Training</span>
                     </div>
-                    <div class="stat-card">
+                    <!-- <div class="stat-card">
                         <div class="stat-icon-circle bg-red-grad"><i class="fas fa-ruler-combined"></i></div>
                         <span class="stat-val">63 Ha</span>
                         <span class="stat-label">Area</span>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="p-3 bg-white rounded-3 border d-flex align-items-center gap-3 mt-auto">
@@ -320,7 +320,7 @@
 
             <div class="col-lg-7 right-panel">
                 <div class="tag-row">
-                    <span class="badge-pill tag-red">MADC OPERATED</span>
+                    <!-- <span class="badge-pill tag-red">MADC OPERATED</span> -->
                     <span class="badge-pill tag-grey"><i class="fas fa-map-marker-alt me-1"></i> DHULE, MAHARASHTRA</span>
                 </div>
 
@@ -332,7 +332,7 @@
                 <div class="highlight-box">
                     <span class="info-label"><i class="fas fa-info-circle me-1"></i> About Dhule</span>
                     <p id="read-content" style="font-size: 0.9rem; color: #555; line-height: 1.7; margin: 0;">
-                        Dhule (Gondur) Airport is operated by MADC. This airport is primarily used for non-scheduled flights of VIPs and corporates. The airport infrastructure is developed over 63 Hectares, featuring a runway of 1380 meters. It also serves as a key base for aviation training through the Bombay Flying Club.
+                        Dhule (Gondur) Airport is operated by MADC. This airport is primarily used for non-scheduled flights.  The airport infrastructure is developed over 63 Hectares, featuring a runway of 1380 meters. It also serves as a key base for aviation training through the Bombay Flying Club.
                     </p>
                 </div>
 
@@ -342,9 +342,9 @@
                         <div class="feature-item">
                             <i class="fas fa-road"></i> 1380m x 30m Runway
                         </div>
-                        <div class="feature-item">
+                        <!-- <div class="feature-item">
                             <i class="fas fa-users"></i> VIP & Corporate
-                        </div>
+                        </div> -->
                         <div class="feature-item">
                             <i class="fas fa-school"></i> Bombay Flying Club
                         </div>
