--- a/latur.html
+++ b/latur.html
@@ -283,7 +283,7 @@
                     <span class="stat-val">2,300 m</span>
                     <span class="stat-label">Runway Length</span>
                 </div>
-                <div class="stat-card">
+                <!-- <div class="stat-card">
                     <div class="stat-icon-circle bg-grey-grad"><i class="fas fa-plane"></i></div>
                     <span class="stat-val">LTU</span>
                     <span class="stat-label">IATA Code</span>
@@ -292,7 +292,7 @@
                     <div class="stat-icon-circle bg-red-grad"><i class="fas fa-crown"></i></div>
                     <span class="stat-val">VIP</span>
                     <span class="stat-label">Charter Hub</span>
-                </div>
+                </div> -->
             </div>
 
             <div class="p-3 bg-white rounded-3 border d-flex align-items-center gap-3 mt-auto">
@@ -308,38 +308,40 @@
 
         <div class="right-panel">
             <div class="tag-row">
-                <span class="badge-pill tag-red">OPERATIONAL AIRPORT</span>
+                <!-- <span class="badge-pill tag-red">OPERATIONAL AIRPORT</span> -->
                 <span class="badge-pill tag-orange"><i class="fas fa-map-marker-alt me-1"></i> LATUR, MAHARASHTRA</span>
             </div>
 
             <div>
-                <h1 class="main-title">Latur Airport (LTU)</h1>
-                <p class="subtitle">"Supporting regional, VIP, and charter aviation in Marathwada"</p>
+                <h1 class="main-title">Latur Airport </h1>
+                <p class="subtitle">"Supporting regional aviation in Marathwada"</p>
             </div>
 
             <div class="highlight-box">
-                <span class="info-label"><i class="fas fa-info-circle me-1"></i> Operational Status Note</span>
+                <span class="info-label"><i class="fas fa-info-circle me-1"></i>About Latur Airport</span>
                 <p style="font-size: 0.85rem; color: #555; line-height: 1.6; margin: 0;">
-                    Latur Airport is fully functional for VIP, charter, and special flights. Verifying current flight operations is advised before planning travel.
+               Latur Airport is currently operational for general aviation and pilot training. MADC is evaluating infrastructure enhancements as part of broader regional connectivity initiatives across Maharashtra.
+Government resolution regarding handing over of Latur Airport to MADC Ltd. released on 30th December 2025.
                 </p>
             </div>
 
-            <div class="mt-4">
+            <!-- <div class="mt-4">
                 <h5 style="font-weight: 700; font-size: 1rem; color: var(--madc-dark); margin-bottom: 10px;">About Latur Airport</h5>
                 <p id="read-intro" style="font-size: 0.85rem; color: #555; line-height: 1.6; margin: 0;">
-                    Latur Airport (LTU) is owned by the Maharashtra Industrial Development Corporation and operated by Reliance Airport Developers. It primarily supports VIP and corporate aviation.
+                    Latur Airport (LTU) is owned by the Maharashtra Industrial Development Corporation and operated by Reliance Airport Developers. It primarily supports VIP and corporate aviation.<br/>Government resolution regarding handing over of Latur Airport to MADC Ltd. released on 30th December 2025.
                 </p>
-            </div>
+            </div> -->
 
             <div id="read-content" style="display:none;">
-                Welcome to Latur Airport, IATA code LTU. This airport is located twelve kilometers west of Latur city. It features an asphalt runway of two thousand three hundred meters and serves primarily VIP and charter flights.
+                Welcome to Latur Airport, IATA code LTU. This airport is located twelve kilometers west of Latur city. It features an asphalt runway of two thousand three hundred meters and serves primarily Non Scheduled Operations and FTO Training.
             </div>
 
             <div class="mt-4">
                 <span class="info-label" style="color:#888; margin-bottom: 8px;">KEY FEATURES</span>
                 <div class="features-grid">
                     <div class="feature-item"><i class="fas fa-road"></i> <span>2,300m Asphalt Runway</span></div>
-                    <div class="feature-item"><i class="fas fa-user-tie"></i> <span>VIP & Charter Operations</span></div>
+                    <div class="feature-item"><i class="fas fa-plane"></i> <span>Non-Scheduled Operations</span></div>
+                    <div class="feature-item"><i class="fas fa-graduation-cap"></i> <span>FTO Training</span></div>
                 </div>
             </div>
 
