--- a/ratnagiri.html
+++ b/ratnagiri.html
@@ -332,7 +332,7 @@
 
             <div>
                 <h1 class="main-title">Ratnagiri Airport</h1>
-                <p class="subtitle">"Enhancing Konkan connectivity through UDAN Civil Enclave"</p>
+                <p class="subtitle">"Enhancing Konkan connectivity through UDAN"</p>
             </div>
 
             <div class="highlight-box">
@@ -349,9 +349,9 @@
             <div class="mt-4">
                 <span class="info-label" style="color:#888; margin-bottom: 8px;">KEY FEATURES & DEVELOPMENT</span>
                 <div class="features-grid">
-                    <div class="feature-item"><i class="fas fa-shield-alt"></i> <span>Coast Guard Enclave</span></div>
+                    <div class="feature-item"><i class="fas fa-shield-alt"></i> <span>Civil Enclave</span></div>
                     <div class="feature-item"><i class="fas fa-plane"></i> <span>ATR-72 / Q400 Ready</span></div>
-                    <div class="feature-item"><i class="fas fa-users"></i> <span>150 PHP Terminal</span></div>
+                    <div class="feature-item"><i class="fas fa-users"></i> <span>150 PHP </span></div>
                     <div class="feature-item"><i class="fas fa-tasks"></i> <span>UDAN Scheme Focus</span></div>
                 </div>
             </div>
