--- a/solapur.html
+++ b/solapur.html
@@ -78,7 +78,7 @@
         .hero-img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: contain;
             transition: transform 0.5s ease;
         }
         .hero-image-wrapper:hover .hero-img { transform: scale(1.05); }
@@ -292,9 +292,9 @@
                     <div class="carousel-item active">
                         <img src="assets/img/solapur_existing_location1.png" alt="Solapur Airport Map">
                     </div>
-                    <div class="carousel-item">
+                    <!-- <div class="carousel-item">
                         <img src="assets/img/solapur_existing_location1.png" alt="Solapur View" style="filter: brightness(0.9);">
-                    </div>
+                    </div> -->
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#solapurCarousel" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon"></span>
@@ -310,11 +310,11 @@
                     <span class="stat-val">Textile</span>
                     <span class="stat-label">Hub</span>
                 </div>
-                <div class="stat-card">
+                <!-- <div class="stat-card">
                     <div class="stat-icon-circle bg-grey-grad"><i class="fas fa-map-marked-alt"></i></div>
                     <span class="stat-val">Area</span>
                     <span class="stat-label">300 Sq KM</span>
-                </div>
+                </div> -->
                 <div class="stat-card">
                     <div class="stat-icon-circle bg-red-grad"><i class="fas fa-om"></i></div>
                     <span class="stat-val">Temple</span>
@@ -349,6 +349,8 @@
                 <span class="info-label"><i class="fas fa-info-circle me-1"></i> About Solapur & Airport</span>
                 <p id="read-intro" style="font-size: 0.85rem; color: #555; line-height: 1.6; margin: 0;">
                     Solapur is a major city in south-western Maharashtra, bordering Karnataka. Known for its world-famous Solapuri chadars and towels, it is a leading center for cotton mills. The city is also a significant spiritual destination, home to Shri Siddheshwar and the famous 'Gadda Yatra'.
+                    <br/> Total Land of 549 Ha is acquired by MADC for construction of Solapur (Boramani) Airport .
+As per GR dated 21.08.2013, Airport is to be developed by a JV with AAI and MADC.
                 </p>
             </div>
 
@@ -361,7 +363,7 @@
                 The Greenfield Airport project aims to boost connectivity for this textile and industrial hub.
             </div>
 
-            <div>
+            <!-- <div>
                 <span class="info-label" style="color:#888; margin-bottom: 8px;">CITY HIGHLIGHTS</span>
                 <div class="features-grid">
                     <div class="feature-item">
@@ -383,7 +385,7 @@
                         <i class="fas fa-calendar-alt"></i> <span>Annual Gadda Yatra</span>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <div class="action-row">
                 <button id="voiceBtn" class="btn-premium btn-ai" onclick="toggleVoice()">
